Update README and demo

--- a/media/stylesheets/main.css
+++ b/media/stylesheets/main.css
@@ -3,3 +3,16 @@
     width: 18px;
     margin-right: 5px;
 }
+
+.textarea-wrapper {
+    position: relative;
+}
+
+.label {
+    position: absolute;
+    z-index: 10;
+}
+
+textarea {
+    padding-top: 20px;
+}
