--- a/media/stylesheets/main.css
+++ b/media/stylesheets/main.css
@@ -13,6 +13,27 @@
     z-index: 10;
 }
 
-textarea {
+textarea, .contenteditable1 {
     padding-top: 20px;
+    display: block;
+    width: 100%;
+}
+
+.contenteditable1 {
+    height: 100px;
+    border: 1px solid #ccc;
+    color: #555;
+
+    -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+       -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
+         -o-transition: border linear 0.2s, box-shadow linear 0.2s;
+            transition: border linear 0.2s, box-shadow linear 0.2s;
+
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+       -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
 }
