--- a/media/stylesheets/main.css
+++ b/media/stylesheets/main.css
@@ -10,7 +10,7 @@
 }
 
 textarea, .contenteditable1 {
-    padding-top: 20px;
+    padding-top: 20px !important;
     display: block;
     width: 100%;
 }
