--- a/docs/index.pug
+++ b/docs/index.pug
@@ -6,6 +6,8 @@ html(lang="en")
     title Textcomplete
     link(rel="stylesheet" href="https://fonts.xz.style/serve/inter.css")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.54.0/codemirror.min.css")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.54.0/theme/base16-light.min.css")
     link(rel="stylesheet" href="./main.scss")
     script(defer src="./main.tsx")
   body
